plugins/devkit/testData/inspections/registrationProblems/code/MyApplicationComponentWrongClass.java
public class <error descr="According to its registration in plugin.xml, the class should implement 'com.intellij.openapi.components.ApplicationComponent'">MyApplicationComponentWrongClass</error> {}